Update /now page layout issue

--- a/_sass/article.scss
+++ b/_sass/article.scss
@@ -5,6 +5,11 @@
 .page-header {
   margin: 4rem 0;
   text-align: center;
+
+  h1 + p {
+    margin-top: -1.5rem;
+  }
+
 }
 
 .draft-notice {
